# daebbang-api/src/main/java/com/daebbang/daebbangapi/domain/order/dto/response/ReasonTypeResponse.java
@@ -1,0 +1,12 @@
+package com.daebbang.daebbangapi.domain.order.dto.response;
+
+import com.daebbang.daebbangcore.domain.order.entity.ReasonType;
+
+public record ReasonTypeResponse(
+    String code,
+    String description
+) {
+    public static ReasonTypeResponse from(ReasonType reasonType) {
+        return new ReasonTypeResponse(reasonType.name(), reasonType.getDescription());
+    }
+}
