# daebbang-core/src/main/java/com/daebbang/daebbangcore/domain/order/entity/ClaimStatus.java
@@ -1,0 +1,7 @@
+package com.daebbang.daebbangcore.domain.order.entity;
+
+public enum ClaimStatus {
+    REQUESTED,   // 신청
+    COMPLETED,   // 처리완료
+    REJECTED     // 거절
+}
